--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     # build an image with SwarmSpawner and our jupyterhub_config.py
     env_file: .env
     build:
-      context: "../.."
-      dockerfile: "examples/swarm/Dockerfile"
+      #context: "../.."
+      dockerfile: "Dockerfile"
     # mount the docker socket
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
